--- a/history/templates/history/report_details.html
+++ b/history/templates/history/report_details.html
@@ -51,7 +51,7 @@
     </form>
 </div>
 
-<div style="margin-top: 10px; margin-bottom: 10px;">
+<div style="margin-top: 10px;">
     <form action="", method="post">
         {% csrf_token %}
         <input type="hidden" name="status" value="resolved">
@@ -59,8 +59,13 @@
     </form>
 </div>
 
+<div style="margin-top: 10px; margin-bottom: 10px">
+    <form method="POST" action="{% url 'history:delete' %}">
+        {% csrf_token %}
+        <input type="hidden" name="report_id" value="{{ report.id }}">
+        <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this report?');">Delete</button>
+    </form>
+</div>
 
 {% endif %}
-
-
 {% endblock %}
