--- a/history/templates/history/report_details.html
+++ b/history/templates/history/report_details.html
@@ -63,7 +63,7 @@
     <form method="POST" action="{% url 'history:delete' %}">
         {% csrf_token %}
         <input type="hidden" name="report_id" value="{{ report.id }}">
-        <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this report?');">Delete</button>
+        <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this report?');">Delete</button>
     </form>
 </div>
 
