--- a/submit/templates/submit/submission_complete.html
+++ b/submit/templates/submit/submission_complete.html
@@ -13,13 +13,11 @@
 {% endblock %}
 
 {% block main %}
-<div class="case-id-container">
-    <p>Case ID: <span id="caseID">{{ case_hash }}</span></p>
+<div class="case-id-container" style="display: flex; align-items: center;">
+    <p style="margin-bottom: 0;">Case ID: <span id="caseID">{{ case_hash }}</span></p>
+    <button onclick="copyCaseID()" class="copy-btn" style="margin-left: 10px;">Copy</button>
 </div>
-<div class = "save-case-container">
-    <p>Please save this Case ID if you want to check the status of your report later.</p>
-    <button onclick="copyCaseID()" class="copy-btn">Copy</button>
-</div>
+<p>Please save this Case ID if you want to check the status of your report later.</p>
 
 <div class="container">
     <p>Return to <a href="{% url 'shared:home' %}">home</a>.</p>
@@ -39,7 +37,7 @@
 
         // Create a tooltip-like feedback
         var feedback = document.createElement("div");
-        feedback.textContent = "Copied!";
+        feedback.textContent = "Copied Hash to Clipboard!";
         feedback.style.position = "fixed";
         feedback.style.bottom = "20px";
         feedback.style.right = "20px";
