--- a/history/templates/history/dashboard.html
+++ b/history/templates/history/dashboard.html
@@ -5,11 +5,22 @@
     <link rel="stylesheet" type="text/css" href="{% static 'history/dashboard.css' %}">
 {% endblock %}
 
+{% block extra_js %}
+<script>
+document.addEventListener("DOMContentLoaded", function(){
+  var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+  var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+    return new bootstrap.Tooltip(tooltipTriggerEl);
+  });
+});
+</script>
+{% endblock %}
+
 {% block main %}
 <h1>Completed Reports</h1>
 
-<table class="table table-hover table-responsive-md">
-  <thead class="thead-dark">
+<table class="table table-hover table-responsive">
+  <thead class="table-dark">
     <tr>
       <th scope="col">Report Hash</th>
       <th scope="col">Submitted By</th>
@@ -22,7 +33,7 @@
     {% for report in reports %}
     <tr>
       <td>
-        <span class="hash-cell" title="{{ report.report_hash }}">{{ report.report_hash }}</span>
+        <span class="hash-cell" data-bs-toggle="tooltip" data-bs-placement="top" title="{{ report.report_hash }}">{{ report.report_hash }}</span>
       </td>      
       <td>
         {% if report.user %} 
