--- a/history/templates/history/report_details.html
+++ b/history/templates/history/report_details.html
@@ -47,12 +47,21 @@
 </div>
 
 <div style="margin-top: 10px;">
-    <form action="", method="post">
+    <form action="{% 'history:update_report_status' %}", method="post">
         {% csrf_token %}
-        <input type="hidden" name="status" value="resolved">
-        <button type="submit" class="btn btn-primary">Resolve</button>
+        <input type="hidden" name="status" value="APPROVED">
+        <button type="submit" class="btn btn-success">Approve</button>
     </form>
 </div>
+
+<div style="margin-top: 10px;">
+    <form action="{% 'history:update_report_status' %}", method="post">
+        {% csrf_token %}
+        <input type="hidden" name="status" value="REJECTED">
+        <button type="submit" class="btn btn-warning">Reject</button>
+    </form>
+</div>
+{% endif %}
 
 <div style="margin-top: 10px; margin-bottom: 10px">
     <form method="POST" action="{% url 'history:delete' %}">
@@ -61,6 +70,4 @@
         <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this report?');">Delete</button>
     </form>
 </div>
-
-{% endif %}
 {% endblock %}
