--- a/history/templates/history/report_details.html
+++ b/history/templates/history/report_details.html
@@ -33,13 +33,8 @@
 <div>
     <form action="", method="post">
         {% csrf_token %}
-        <input
-        type="text"
-        id="notes"
-        name="notes"
-        class="form-control"
-        placeholder="Notes"
-        />
+        <input type="hidden" name="report_id" value="{{ report.id }}">
+        <input type="text" id="notes" name="notes"class="form-control" placeholder="Notes"/>
         <div style="margin-top: 10px;">
             <button type="submit" class="btn btn-primary" m>Add Notes</button>
         </div>
@@ -49,6 +44,7 @@
 <div style="margin-top: 10px;">
     <form action="{% url 'history:update_report_status' %}", method="post">
         {% csrf_token %}
+        <input type="hidden" name="report_id" value="{{ report.id }}">
         <input type="hidden" name="status" value="APPROVED">
         <button type="submit" class="btn btn-success">Approve</button>
     </form>
@@ -57,6 +53,7 @@
 <div style="margin-top: 10px;">
     <form action="{% url 'history:update_report_status' %}", method="post">
         {% csrf_token %}
+        <input type="hidden" name="report_id" value="{{ report.id }}">
         <input type="hidden" name="status" value="REJECTED">
         <button type="submit" class="btn btn-warning">Reject</button>
     </form>
