--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -93,6 +93,9 @@
             <ul class="navbar-nav ml-auto">
                 <!-- Conditional rendering based on user's sign-in status -->
                 {% if user.profile.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'history:dashboard' %}">{{user.name}}</a>
+                    </li>
                     {% if user.profile.is_admin %}
                         <li class="nav-item">
                             <a class="nav-link" href="/shared/admin_home">
