--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -90,22 +90,18 @@
                 </li>
             </ul>
 
-            <ul class="navbar-nav ml-auto">
-                <!-- Conditional rendering based on user's sign-in status -->
+            <ul class="navbar-nav ms-auto">
                 {% if user.profile.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'history:dashboard' %}">{{user.name}}</a>
-                    </li>
                     {% if user.profile.is_admin %}
                         <li class="nav-item">
                             <a class="nav-link" href="/shared/admin_home">
-                                <i class="fas fa-sign-in-alt"></i> Account
+                                <i class="fas fa-sign-in-alt"></i> {{user.name}}
                             </a>
                         </li>
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'history:dashboard' %}">
-                                <i class="fas fa-sign-in-alt"></i> Dashboard
+                                <i class="fas fa-sign-in-alt"></i> {{user.name}}
                             </a>
                         </li>
                     {% endif %}
