--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -60,40 +60,16 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'shared:home' %}"
-                >Home<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="https://honor.virginia.edu/"
-                >Honor Code<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'submit:incident_categories' %}"
-                >Incident Categories<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Reports
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="{% url 'submit:start_submission' %}"
-                    >Make a Report</a
-                  >
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'shared:home' %}"
+                    >Home<span class="sr-only">(current)</span></a
+                    >
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="https://honor.virginia.edu/"
+                    >Honor Code<span class="sr-only">(current)</span></a
+                    >
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'submit:incident_categories' %}"
@@ -119,40 +95,66 @@
                             >Make a Report</a
                             >
                         </li>
-                        <li>
-                            <a class="dropdown-item" href="{% url 'history:lookup' %}"
-                            >Find Report</a
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{% url 'submit:incident_categories' %}"
+                            >Incident Categories<span class="sr-only">(current)</span></a
                             >
                         </li>
+                        <li class="nav-item dropdown">
+                            <a
+                                    class="nav-link dropdown-toggle"
+                                    href="#"
+                                    id="navbarDropdown"
+                                    role="button"
+                                    data-bs-toggle="dropdown"
+                                    aria-expanded="false"
+                            >
+                                Reports
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li>
+                                    <a
+                                            class="dropdown-item"
+                                            href="{% url 'submit:start_submission' %}"
+                                    >Make a Report</a
+                                    >
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'history:lookup' %}"
+                                    >Find Report</a
+                                    >
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto">
+                        {% if user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'history:dashboard' %}">
+                                    {{ user.username }}'s Dashboard
+                                </a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'login:login_view' %}"
+                                >Sign In</a
+                                >
+                            </li>
+                        {% endif %}
+                        {% if user.is_authenticated %}
+                            <form
+                                    class="form-inline my-2 my-lg-0"
+                                    action="{% url 'account_logout' %}"
+                                    method="post"
+                            >
+                                {% csrf_token %}
+                                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">
+                                    Sign Out
+                                </button>
+                            </form>
+                        {% endif %}
                     </ul>
                 </li>
-            </ul>
-            <ul class="navbar-nav ms-auto">
-                {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'history:dashboard' %}">
-                            {{ user.username }}'s Dashboard
-                        </a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login:login_view' %}"
-                        >Sign In</a
-                        >
-                    </li>
-                {% endif %}
-                {% if user.is_authenticated %}
-                    <form
-                            class="form-inline my-2 my-lg-0"
-                            action="{% url 'account_logout' %}"
-                            method="post"
-                    >
-                        {% csrf_token %}
-                        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">
-                            Sign Out
-                        </button>
-                    </form>
-                {% endif %}
             </ul>
         </div>
     </nav>
@@ -217,9 +219,10 @@
             },
             body: "timezone=" + encodeURIComponent(timezone),
         })
-          .then((response) => response.text())
-          .catch((error) => {});
-      }
-    </script>
-  </body>
+            .then((response) => response.text())
+            .catch((error) => {
+            });
+    }
+</script>
+</body>
 </html>
